--- a/style.css
+++ b/style.css
@@ -2,4 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: 'Inter', sans-serif;
+}
+
+body {
+  background: url(./assets/bg-desktop-dark.png) no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+#container {
+  margin: 56px auto 0;
+  width: 588px;
+  height: 712px;
 }
