--- a/style.css
+++ b/style.css
@@ -17,3 +17,23 @@ body {
   width: 588px;
   height: 712px;
 }
+
+#profile {
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#profile img {
+  width: 112px;
+  height: 112px;
+}
+
+#profile span {
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
