feat: add redirect buttons to external links

--- a/style.css
+++ b/style.css
@@ -74,3 +74,39 @@ body {
   width: 32px;
   height: 32px;
 }
+
+#links {
+  padding: 24px;
+  width: 100%;
+}
+
+#links ul {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  list-style: none;
+}
+
+#links ul li {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+}
+
+#links ul li a {
+  padding: 16px 24px;
+  display: flex;
+  justify-content: center;
+
+  border-radius: 8px;
+
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration: none;
+}
