--- a/style.css
+++ b/style.css
@@ -112,3 +112,20 @@ body {
   line-height: 24px;
   text-decoration: none;
 }
+
+#social-links {
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  width: 100%;
+
+  font-size: 24px;
+}
+
+#social-links a {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  color: white;
+}
