--- a/style.css
+++ b/style.css
@@ -129,3 +129,16 @@ body {
   align-items: center;
   color: white;
 }
+
+footer {
+  padding: 24px;
+  width: 100%;
+  text-align: center;
+}
+
+footer p {
+  color: white;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
